Add splash screen and update Electron app startup
Introduced a splash screen during app startup in Electron to improve user experience while checking for updates. Updated window creation logic to show the main window only after it's ready, and improved error handling for loading index.html. Also updated package.json build files and set Vite base path for better packaging.

--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "win": {
       "target": "nsis"
     },
-    "directories": {
-      "output": "dist_v2"
-    }
+    "files": [
+      "dist/**/*",
+      "dist-electron/**/*",
+      "package.json"
+    ]
   }
 }
