--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-player": "^2.14.1",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "serve-handler": "^6.1.6"
   },
   "devDependencies": {
     "@mightymeld/runtime": "^0.1.51",
     "@types/react": "^18.2.43",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.17",
+    "@types/serve-handler": "^6.1.4",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "electron": "^40.0.0",
